fix: align text to left

--- a/src/styles/components/ContactForm.module.scss
+++ b/src/styles/components/ContactForm.module.scss
@@ -54,6 +54,7 @@
   gap: 2vw;
   flex: 1 1 auto;
   min-height: 0;
+  text-align: left;
 }
 
 .label {
